--- a/custom_components/stream_assist_cc/translations/en.json
+++ b/custom_components/stream_assist_cc/translations/en.json
@@ -11,6 +11,7 @@
           "player_entity_id": "Player Entity",
           "stt_start_media": "STT Start Media",
           "stt_end_media": "STT End Media",
+          "stt_error_media": "STT Error Media",
           "pipeline_id": "Voice Assistant Pipeline"
         },
         "description": "Enter the URL for your audio stream or select a camera entity"
@@ -26,6 +27,7 @@
           "player_entity_id": "Player Entity",
           "stt_start_media": "STT Start Media",
           "stt_end_media": "STT End Media",
+          "stt_error_media": "STT Error Media",
           "pipeline_id": "Voice Assistant Pipeline"
         }
       }
